<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <groupId>edu.upf.taln.textplanning</groupId>
    <artifactId>textplanning</artifactId>
    <version>0.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Text planning</name>
	<description>Implementation of a text planning module</description>
    <organization>
        <name>Universitat Pompeu Fabra</name>
        <url>upf.edu</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mvn.compiler.version>3.5.1</mvn.compiler.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <modules>
        <module>core</module>
        <module>common</module>
        <module>amr</module>
        <module>uima-dsynt</module>
        <module>tools</module>
        <module>optimization</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>27.0.1-jre</version>
        </dependency>
    </dependencies>

	<distributionManagement>
		<repository>
			<id>maven-releases</id>
			<name>Internal Release Repository</name>
			<url>http://maven-taln.upf.edu/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>maven-snapshots</id>
			<name>Internal Snapshot Repository</name>
			<url>http://maven-taln.upf.edu/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>taln-repo-internal</id>
			<name>TALN internal repo</name>
			<url>http://maven-taln.upf.edu/repository/maven-releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>taln-repo-snapshots</id>
			<name>TALN internal repo</name>
			<url>http://maven-taln.upf.edu/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
		        <groupId>external.atlassian.jgitflow</groupId>
		        <artifactId>jgitflow-maven-plugin</artifactId>
		        <version>1.0-m5.1</version>
		        <configuration>
		            <flowInitContext>
		                <masterBranchName>master</masterBranchName>
		                <developBranchName>development</developBranchName>
		                <featureBranchPrefix>feature-</featureBranchPrefix>
		                <releaseBranchPrefix>release-</releaseBranchPrefix>
		                <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
		                <versionTagPrefix>version-</versionTagPrefix>
		            </flowInitContext>
<!-- 		            <username>USERNAME_FOR_A_GIT_USER</username> -->
<!-- 		            <password>PASSWORD_FOR_A_GIT_USER</password> -->
		            <noDeploy>true</noDeploy>
		            <squash>false</squash>
		            <scmCommentPrefix>[RELEASE] </scmCommentPrefix>
		    	</configuration>
			</plugin>
		</plugins>
	</build>
</project>
